fixed z-index issue with hamburgers

--- a/src/Navigation/style.scss
+++ b/src/Navigation/style.scss
@@ -5,7 +5,10 @@
 #hamburger, #navburger {
   left: 20px;
   top: 7px;
-  z-index: 1000000000;
+}
+
+#hamburger {
+  z-index: 1000000; 
 }
 
 #navburger {
